[package]
name = "cheetah"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "3.2.11"
cuid = "1.2.0"
futures = "0.3.25"
html5ever = "^0.25"
kuchiki = "0.8.1"
notify = "5.0.0"
pathdiff = "0.2.1"
pulldown-cmark = "0.9.1"
rayon = "1.5.3"
regex = "1.6.0"
tokio = { version = "1.24.2", features = ["full"] }
warp = "0.3.3"
