[package]
name = "cheetah"
version = "0.2.1"
edition = "2021"
authors = ["Aleks Rūtiņš <aleks@rutins.com>"]
license = "MIT"
homepage = "https://cheetah.farthergate.com"
documentation = "https://cheetah.farthergate.com"
repository = "https://github.com/aleksrutins/cheetah"
readme = "README.md"
description = "An extremely fast and flexible static site generator."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "3.2.11"
config = "0.13.4"
cuid = "1.2.0"
futures = "0.3.25"
html5ever = "^0.25"
indicatif = "0.17.7"
kuchiki = "0.8.1"
lazy_static = "1.4.0"
notify = "5.0.0"
pathdiff = "0.2.1"
pulldown-cmark = "0.9.1"
rayon = "1.5.3"
regex = "1.6.0"
serde = "1.0.193"
tokio = { version = "1.24.2", features = ["full"] }
warp = "0.3.3"
