[package]
name = "cheetah"
version = "0.4.1"
edition = "2024"
authors = ["Aleks Rūtiņš <aleks@rutins.com>"]
license = "MIT"
homepage = "https://cheetah.farthergate.com"
documentation = "https://cheetah.farthergate.com"
repository = "https://git.sr.ht/~aleksrutins/cheetah"
readme = "README.md"
description = "An extremely fast and flexible static site generator."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "4.5.49"
config = "0.15.18"
cuid = "1.2.0"
deno_task_shell = "0.26.1"
futures = "0.3.25"
html5ever = "^0.35"
indexmap = "2.11.4"
indicatif = "0.18.0"
kuchikikiki = "0.9.0"
lazy_static = "1.4.0"
locrian = "0.2.1"
notify = "8.2.0"
pathdiff = "0.2.1"
pulldown-cmark = "0.13.0"
rayon = "1.5.3"
regex = "1.6.0"
serde = "1.0.193"
tokio = { version = "1.24.2", features = ["full"] }
warp = { version = "0.4.2", features = ["server"] }
wax = "0.6.0"
